Done with project kmom03

--- a/theme/src/base/base_kmom03.less
+++ b/theme/src/base/base_kmom03.less
@@ -17,8 +17,12 @@ body {
     color: @colorBody;
     background-color: @bgColorBody;
 //    font: 100.01%/1 @fontFamilyBody;
+    #desinax-hgrid.font(@fontSizeBody);
 }
 
 img {
     max-width: 100%;
 }
+
+// Activate grid and affect all typographic elements
+#desinax-hgrid.activateDefaultTypography();
