--- a/theme/src/layout/vgrid.less
+++ b/theme/src/layout/vgrid.less
@@ -84,13 +84,21 @@
     &.has-sidebar-right {
         #desinax-vgrid.column(@columns * 3 / 4 - 1);
     }
-
+    &.has-sidebar-left.has-sidebar-right {
+        #desinax-vgrid.column(@columns - 10);
+    }
 }
 
 .region-sidebar-right,
 .region-sidebar-left {
     #desinax-vgrid.column(@columns * 1 / 4);
 }
+
+.region-sidebar-right.has-sidebar-left,
+.region-sidebar-left.has-sidebar-right {
+    #desinax-vgrid.column(@columns * 1 / 4 - 1);
+}
+
 
 .region-sidebar-right {
     #desinax-vgrid.push(1);
@@ -138,8 +146,15 @@
     .region-main {
         #desinax-vgrid.column(@columns);
         // #desinax-vgrid.push(0);
+        &.has-sidebar-left.has-sidebar-right {
+            #desinax-vgrid.column(@columns);
+        }
     }
     .region-sidebar-left {
+        #desinax-vgrid.column(@columns);
+    }
+    .region-sidebar-right.has-sidebar-left,
+    .region-sidebar-left.has-sidebar-right {
         #desinax-vgrid.column(@columns);
     }
 }
