--- a/htdocs/css/kmom04_colorful.css
+++ b/htdocs/css/kmom04_colorful.css
@@ -1,7 +1,7 @@
 /*!
- * Stylesheet for design kmom03.
+ * Stylesheet for design kmom04.
  *
- * This stylesheet is for the design course and kmom03 where we use LESS.
+ * This stylesheet is for the design course and kmom04 where we use LESS.
  */
 /**
    * Mixin clearfix.
@@ -4723,6 +4723,14 @@ hr::after {
 /**
 * General layout
 */
+body {
+  background-image: linear-gradient(to right top, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
+  color: #fff;
+}
+a {
+  color: #fff;
+  text-decoration: none;
+}
 .row {
   display: block;
   width: 101.04166667%;
@@ -4734,9 +4742,6 @@ hr::after {
   content: "";
   display: block;
   clear: both;
-}
-.inner-wrap-main {
-  background-color: darkgrey;
 }
 .inner-wrap {
   margin-right: auto;
@@ -4781,7 +4786,7 @@ hr::after {
 }
 .my-navbar li {
   display: inline-block;
-  background-color: #92B6C8;
+  background-color: #00FFE8;
 }
 .my-navbar a {
   text-decoration: none;
@@ -4880,7 +4885,7 @@ hr::after {
   width: 32.29166667%;
   margin-left: 0.52083333%;
   margin-right: 0.52083333%;
-  background-color: #768CA1 !important;
+  background-color: #CCA914 !important;
   text-align: center;
 }
 .footer-column a {
