--- a/theme/htdocs/css/kmom04_dark.css
+++ b/theme/htdocs/css/kmom04_dark.css
@@ -1,7 +1,7 @@
 /*!
- * Stylesheet for design kmom03.
+ * Stylesheet for design kmom04.
  *
- * This stylesheet is for the design course and kmom03 where we use LESS.
+ * This stylesheet is for the design course and kmom04 where we use LESS.
  */
 /**
    * Mixin clearfix.
@@ -4392,7 +4392,7 @@ body {
   padding: 0;
   color: #333;
   background-color: #fff;
-  font: 16px/1.5 "sans-serif";
+  font: 16px/1.5 monospace;
 }
 img {
   max-width: 100%;
@@ -4403,7 +4403,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "serif";
+  font-family: monospace;
   margin-top: 24px;
   margin-bottom: 24px;
 }
@@ -4723,6 +4723,14 @@ hr::after {
 /**
 * General layout
 */
+body {
+  background-image: linear-gradient(to right top, #121314, #303537, #515b5a, #78837c, #a8ac9e);
+  color: #c1c4c9;
+}
+a {
+  color: #fff;
+  text-decoration: none;
+}
 .row {
   display: block;
   width: 101.04166667%;
@@ -4734,9 +4742,6 @@ hr::after {
   content: "";
   display: block;
   clear: both;
-}
-.inner-wrap-main {
-  background-color: darkgrey;
 }
 .inner-wrap {
   margin-right: auto;
@@ -4781,7 +4786,7 @@ hr::after {
 }
 .my-navbar li {
   display: inline-block;
-  background-color: #92B6C8;
+  background-color: #706A7F;
 }
 .my-navbar a {
   text-decoration: none;
@@ -4880,7 +4885,7 @@ hr::after {
   width: 32.29166667%;
   margin-left: 0.52083333%;
   margin-right: 0.52083333%;
-  background-color: #768CA1 !important;
+  background-color: #706A7F !important;
   text-align: center;
 }
 .footer-column a {
