--- a/theme/src/layout/layout.less
+++ b/theme/src/layout/layout.less
@@ -87,7 +87,7 @@ li {
 /* Style navbar */
 .my-navbar li {
    display: inline-block;
-   padding: 20px;
+//   padding: 20px;
    background-color: darkgrey;
 }
 
